--- a/src/main/resources/templates/members/forgot-password.html
+++ b/src/main/resources/templates/members/forgot-password.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IduSw - Forgot Password</title>
+    <title>pyc - Forgot Password</title>
 
     <!-- Custom fonts for this template-->
     <div th:replace="~{/main/main-fragment :: header}"></div>
