--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IduSw - Dashboard</title>
+    <title>pyc - Dashboard</title>
 
     <!-- Custom fonts for this template-->
     <div th:replace="~{/main/main-fragment :: header}"></div>
@@ -352,7 +352,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p>IduSw makes extensive use of Bootstrap 4 utility classes in order to reduce
+                                    <p>pyc makes extensive use of Bootstrap 4 utility classes in order to reduce
                                         CSS bloat and poor page performance. Custom CSS classes are used to create
                                         custom components and custom utility classes.</p>
                                     <p class="mb-0">Before working with this theme, you should become familiar with the
@@ -373,7 +373,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Pyc Website 2021</span>
                     </div>
                 </div>
             </footer>
