--- a/src/main/resources/templates/main/main-fragment.html
+++ b/src/main/resources/templates/main/main-fragment.html
@@ -34,7 +34,7 @@
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-laugh-wink"></i>
             </div>
-            <div class="sidebar-brand-text mx-3">IduSw <sup>2</sup></div>
+            <div class="sidebar-brand-text mx-3">pyc <sup>2</sup></div>
         </a>
 
         <!-- Divider -->
@@ -144,7 +144,7 @@
         <!-- Sidebar Message -->
         <div class="sidebar-card d-none d-lg-flex">
             <img class="sidebar-card-illustration mb-2" src="/img/undraw_rocket.svg" alt="...">
-            <p class="text-center mb-2"><strong>IduSw Pro</strong> is packed with premium features, components, and more!</p>
+            <p class="text-center mb-2"><strong>pyc Pro</strong> is packed with premium features, components, and more!</p>
             <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Upgrade to Pro!</a>
         </div>
 
