--- a/src/main/resources/templates/members/list.html
+++ b/src/main/resources/templates/members/list.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>IduSw - Tables</title>
+    <title>pyc - Tables</title>
 
     <!-- Custom fonts for this template -->
     <div th:replace="~{/main/main-fragment :: header}"></div>
@@ -32,7 +32,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">IduSw <sup>2</sup></div>
+                <div class="sidebar-brand-text mx-3">pyc <sup>2</sup></div>
             </a>
 
             <!-- Divider -->
