--- a/src/main/resources/templates/members/list.html
+++ b/src/main/resources/templates/members/list.html
@@ -190,8 +190,10 @@
                                         </tr>
                                     </tfoot>
                                     <tbody>
-                                        <tr th:each="member : ${list}">
-                                            <td>[[${member.seq}]]</td>
+                                      <!--  <tr th:each="member : ${list}">
+                                      model 객체에 애트리뷰트로 설정ㅇ된 PAgeResultDTO 객체의 getDtoList() 호출-->
+                                        <tr th:each="member : ${result.dtoList}">
+                                        <td>[[${member.seq}]]</td>
                                             <td>[[${member.email}]]</td>
                                             <td>[[${member.name}]]</td>
                                             <td>[[${member.pw}]]</td>
